Agregue que es lo que ofrecemos en la empresa

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>Las mejores hamburgesas y papas de la epoca contemporanea</p>
+    <p>Vendemos papas, hamburgesas y sodas</p>
 </body>
 </html>
