--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>Las mejores hamburgesas y papas de la epoca contemporanea</p>
     <p>Vendemos papas, hamburgesas y sodas</p>
+    <p>Y servicios de Waifus</p>
 </body>
 </html>
