Campaña de Arnulfotos

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Las mejores hamburgesas y papas de la epoca contemporanea</p>
     <p>Vendemos papas, hamburgesas y sodas</p>
     <p>Y servicios de Waifus</p>
+    <p>Arnulfo Leon para presidente. Su lema de campaña es "Progreso o muerte"</p>
 </body>
 </html>
