Progreso y Soda Stereo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <p>Las mejores hamburgesas y papas de la epoca contemporanea</p>
+    <p>Vendemos papas, hamburgesas y sodas</p>
+    <p>Y servicios de Waifus</p>
+    <p>Arnulfo Leon para presidente. Su lema de campaña es "Progreso o muerte"</p>
     <p>Mañana es mejor</p>
 </body>
 </html>
