Commit al master del blogpost en su version mas reciente

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>Y servicios de Waifus</p>
     <p>Arnulfo Leon para presidente. Su lema de campaña es "Progreso o muerte"</p>
     <p>Mañana es mejor</p>
+    <p>Ella uso mi cabeza como un revolver</p>
 </body>
 </html>
+
