--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar
             las cosas incréibles que se pueden hacer con ramas</p>
+            <p>Los blogs son la mejor manera de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.</p>
         </div>
     </div>
 </body>
