--- a/blogpost.html
+++ b/blogpost.html
@@ -11,13 +11,14 @@
     <div id="container">
         <div id = "cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div>
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar
             las cosas incréibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor manera de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
