--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             HyperBlog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
-        <div>
+        <div id = "post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar
             las cosas incréibles que se pueden hacer con ramas</p>
