--- a/blogpost.html
+++ b/blogpost.html
@@ -13,12 +13,15 @@
             HyperBlog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
-        <div>
+        <div id = "post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar
             las cosas incréibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor manera de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.</p>
             <p>Suscribete y dale like</p>
+            <div id="footer">
+                Hecho con amor en Platzi 💚
+            </div>
         </div>
     </div>
 </body>
