--- a/blogpost.html
+++ b/blogpost.html
@@ -15,8 +15,8 @@
         </div>
         <div id = "post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>y este es el parrafo de inicio donde vamos a explicar
-            las cosas incréibles que se pueden hacer con ramas</p>
+            <p>y este es el párrafo de inicio donde vamos a explicar
+            las cosas increíbles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor manera de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.</p>
             <p>Suscribete y dale like</p>
             <div id="footer">
